feat: add GetJWT token documentation
